--- a/FckKetReg/MainWindow.xaml
+++ b/FckKetReg/MainWindow.xaml
@@ -8,6 +8,8 @@
         <Label x:Name="passwordLabel" Content="Password" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Height="23" Width="89"/>
         <PasswordBox x:Name="password" HorizontalAlignment="Left" Height="23" Margin="104,41,0,0" VerticalAlignment="Top" Width="120"/>
 
+        <Button Content="Check Login" HorizontalAlignment="Left" Margin="104,69,0,0" VerticalAlignment="Top" Width="75" Click="CheckLogin"/>
+
         <Label x:Name="regPinLabel" Content="Reg PIN" HorizontalAlignment="Left" Height="23" Margin="229,13,0,0" VerticalAlignment="Top" Width="89"/>
         <Label x:Name="termLabel" Content="Term" HorizontalAlignment="Left" Height="23" Margin="229,41,0,0" VerticalAlignment="Top" Width="89"/>
 
@@ -22,11 +24,10 @@
         <TextBox HorizontalAlignment="Left" Height="23" Margin="266,168,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBox HorizontalAlignment="Left" Height="23" Margin="141,168,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBox HorizontalAlignment="Left" Height="23" Margin="391,168,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-
-        <Button Content="Check Login" HorizontalAlignment="Left" Margin="104,69,0,0" VerticalAlignment="Top" Width="75" Click="checkLogin"/>
+        
         <TextBlock HorizontalAlignment="Left" Margin="309,48,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
 
-        <ScrollViewer Margin="0,225,0,0" Background="#FFFFCFCF">
+        <ScrollViewer Margin="0,215,0,0" Background="#FFFFCFCF">
             <TextBlock x:Name="output" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="515" />
         </ScrollViewer>
         <TextBox x:Name="regPin" HorizontalAlignment="Left" Height="23" Margin="323,13,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
